@@ -159,6 +159,46 @@ namespace SimpleInjector.Extensions.LifetimeScoping
             WhenCurrentScopeEnds(container, action);
         }
 
+        /// <summary>
+        /// Adds the <paramref name="disposable"/> to the list of items that will get disposed when the
+        /// scope ends.
+        /// </summary>
+        /// <param name="container">The <see cref="Container"/> instance.</param>
+        /// <param name="disposable">The instance that should be disposed when the scope ends.</param>
+        /// <exception cref="ArgumentNullException">Thrown when one of the arguments is a null reference
+        /// (Nothing in VB).</exception>
+        /// <exception cref="InvalidOperationException">Will be thrown when there is currently no active
+        /// scope for the supplied <paramref name="container"/>.</exception>
+        public override void RegisterForDisposal(Container container, IDisposable disposable)
+        {
+            if (container == null)
+            {
+                throw new ArgumentNullException("container");
+            }
+
+            if (disposable == null)
+            {
+                throw new ArgumentNullException("disposable");
+            }
+
+            var scope = container.GetCurrentLifetimeScope();
+
+            if (scope == null)
+            {
+                if (container.IsVerifying())
+                {
+                    // We're verifying the container, it's impossible to register the action somewhere, but
+                    // verification should absolutely not fail because of this.
+                    return;
+                }
+
+                throw new InvalidOperationException("This method can only be called within the context of " +
+                    "an active lifetime scope. Make sure you call container.BeginLifetimeScope() first.");
+            }
+
+            scope.RegisterForDisposal(disposable);
+        }
+
         internal static Lifestyle Get(bool disposeWhenLifetimeScopeEnds)
         {
             return disposeWhenLifetimeScopeEnds ? WithDisposal : NoDisposal;
