@@ -8,6 +8,10 @@ Version vNext
 	New features:
 		-[Core] Lifestyle.CreateProducer extension methods added to make creating InstanceProducer instances
 		 more convenient. (work item 19959).
+		-[Core/LifetimeScoping/Web/Wcf] An ScopedLifestyle abstraction is added and the scoped lifestyles for
+		 lifetime scoping web and WCF. This allows the container registration to be oblivious to the actual
+		 scoped lifestyle implementation. The ScopedLifestyle class adds an WhenScopeEnds an 
+		 RegisterForDisposal method that users can interact with. (work item 19969)
 
 
 Version 2.3.1 (v2.3.1 RTM)  2013-07-12
